[package]
name = "rpgx"
version = "0.1.0"
edition = "2024"

[lib]
name = "rpgx"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.98"
async-std = "1.13.1"
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
dioxus-logger = "0.6.2"
futures-util = "0.3.31"
gloo-timers = { version = "0.3", features = ["futures"] }
indexmap = "2.9.0"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.77"