[package]
name = "rpgx-spaceship"
version = "0.1.0"
authors = ["loren"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
dioxus-logger = "0.6.2"
futures-util = "0.3.31"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = "0.3.77"
rpgx = { path = "../../packages/rpgx" }
log = "0.4.27"
tokio = "1.45.0"

[features]
default = ["web","desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
