[package]
name = "rpgx-spaceship"
version = "0.1.0"
authors = ["loren"]
edition = "2021"
publish = false

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
dioxus-logger = "0.6.2"
futures-util = "0.3.31"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = "0.3.77"
rpgx = { path = "../../packages/core" }
log = "0.4.27"

# Note: optional and no default features here
rpgx-dioxus = { path = "../../packages/plugins/dioxus", optional = true }

[features]
default = ["web"]

# Web build features — enable rpgx-dioxus/web (no tokio)
web = [
  "dioxus/web",
  "rpgx-dioxus/web"
]

# Desktop build features — enable tokio + rpgx-dioxus/desktop
desktop = [
  "dioxus/desktop",
  "rpgx-dioxus/desktop"
]

# Mobile build (optional)
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
